fix: slideGap issue

--- a/packages/osc-ui/src/components/Carousel/carousel.scss
+++ b/packages/osc-ui/src/components/Carousel/carousel.scss
@@ -8,6 +8,11 @@
     flex-direction: row;
     position: relative;
 
+    .embla__slide_caption {
+        padding: 0;
+        margin: 0;
+    }
+
     .indicators {
         position: absolute;
         top: 0;
